# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.128 2004/12/17 21:06:36 wolf31o2 Exp $

  17 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript/x86-archscript.sh:
  Added -no-emul-boot back into x86-archscript.sh as apparently isolinux will
  not work without it (mkisofs fails on creating ISO).

  16 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  modules/catalyst_support.py, modules/embedded_target.py,
  modules/generic_stage_target.py, modules/grp_target.py,
  modules/livecd_stage1_target.py, modules/livecd_stage2_target.py,
  modules/netboot.py, modules/stage1_target.py, modules/tinderbox_target.py:
  Added patches from Eric Edgar <e_edgar@hotmail.com> from bug #70663 to
  separate out specific target logic from the generic targets modules.

  16 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/embedded_target.py, targets/embedded/embedded-fs-runscript.sh,
  targets/embedded/embedded.sh:
  Added more embedded updates from mutex@gentoo.org and Closing bug #67289.

  16 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  +examples/gamecd.conf.example, -livecd/files/gamecd-xinitrc,
  livecd/runscript/default-runscript.sh,
  livecd/runscript-support/gamecdfs-update.sh,
  livecd/runscript-support/livecdfs-update.sh,
  modules/livecd_stage2_target.py:
  Added gamecd/conf option to livecd_stage2_target.py, added
  gamecd.conf.example to /examples, cleaned up game-specific code in
  gamecdfs-update.sh to make it more generic, added more fundtionality to
  livecdfs-update.sh and default-runscript.sh for gentoo-release-environmental
  and gentoo-gamecd to make spec files simpler and to remove the need for
  specifying a gamecd/environmental fsscript in livecd/fsscript, allowing the
  user to still use a custom fsscript of their own.

  16 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>